--- a/source/Makefile
+++ b/source/Makefile
@@ -127,9 +127,9 @@ DEBUG_OBJS = $(patsubst %.o, %_d.o, $(OBJS))
 
 # Application Name -- what to build
 ifeq ($(USE_MPI),1)
-TGT = SparseDemand_mpi
+TGT = SparseDemand1_mpi
 else
-TGT = SparseDemand
+TGT = SparseDemand1
 endif
 
 # NOTE:  This order of single and double quotes is crucial
