--- a/source/Makefile
+++ b/source/Makefile
@@ -127,7 +127,7 @@ DEBUG_OBJS = $(patsubst %.o, %_d.o, $(OBJS))
 
 # Application Name -- what to build
 ifeq ($(USE_MPI),1)
-TGT = SparseDemand1_mpi
+TGT = SparseDemand_mpi
 else
 TGT = SparseDemand
 endif
