Apply suggestions from code review
Add explanatory comments

Co-authored-by: Matt Graham <matthew.m.graham@gmail.com>

--- a/GeneralCode/nr/Makefile
+++ b/GeneralCode/nr/Makefile
@@ -21,6 +21,7 @@
 # Define macros for Makefile
 
 # Select Current Platform-specific parameters
+# config directory assumed to be in directory two levels above directory of the root makefile
 WorkDir:=$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))/../..
 include $(WorkDir)/config/LoadLocalDefs.inc
 
