Apply suggestions from code review
Co-authored-by: Tuomas Koskela <t.koskela@ucl.ac.uk>

--- a/source/Makefile
+++ b/source/Makefile
@@ -84,6 +84,7 @@ TEST_OBJS = $(TEST_MOD_OBJS) $(TEST_PRG_OBJS)
 
 # Static pattern rules
 
+.DEFAULT_GOAL := exe
 $(OBJS) : %.o : %.f90
 	$(FC) $(FC_FLAGS) -c $< -o $@
 
