Replace NAG linear algebra routines (#30)
* Adding initial new linear algebra routines

Adds new non-NAG depending linear algebra routines replacing existing routines defined in NewTools and ToolsModule and remove these previous implementations. Also adds tests for the new routines.

* Adding general solve, Cholesky and eigendecomposition routines

* Adding log abs determinant function

* Adding check for no change to RHS in solve routines

* Adding optional info output for downstream handling of LAPACK failures

* Clarifying comments about failure conditions

* Removing remaing F0* NAG routine usages

* Fix typo in comment

* Removing use of NAG_DIR environment variable

* Defining public interface

--- a/source/Makefile
+++ b/source/Makefile
@@ -65,6 +65,7 @@ MOD_OBJS = \
 	Ranking.o \
 	NewTools.o \
 	GaussianQuadrature.o \
+	LinearAlgebra.o \
 	GlobalModule.o \
 	OutputModule.o \
 	DataModule.o \
@@ -74,7 +75,7 @@ MOD_OBJS = \
 PRG_OBJS = main.o
 
 # Test modules
-TEST_MOD_OBJS = tests/GaussianQuadratureTests.o
+TEST_MOD_OBJS = tests/GaussianQuadratureTests.o tests/LinearAlgebraTests.o
 
 # Test program
 TEST_PRG_OBJS = tests/RunTests.o
